--- a/source/css/_tags/gallery.styl
+++ b/source/css/_tags/gallery.styl
@@ -1,4 +1,4 @@
-#article-container
+#content-inner
   figure.gallery-group
     position: relative
     float: left
@@ -109,7 +109,8 @@
           display: inline-block
 
       .gallery-data
-        display: none
+        opacity 0
+        visibility hidden
 
     button
       display: none
