--- a/source/css/_tags/gallery.styl
+++ b/source/css/_tags/gallery.styl
@@ -128,13 +128,12 @@
         transition: all .4s
 
       i
-        width: 0
-        opacity: 0
+        opacity: 1
+        font-size: 1.1rem
+
 
       &:hover
         background: var(--btn-hover-color)
 
         i
           margin-left: 2px
-          width: 20px
-          opacity: 1
