修复nav-button a的颜色问题

--- a/source/css/_custom/nav_menu/nav_menu.css
+++ b/source/css/_custom/nav_menu/nav_menu.css
@@ -410,6 +410,13 @@ center#name-container {
 #page-header #nav #nav-left .nav-button a i {
   line-height: 1;
   color: var(--font-color);
+  transition: background 0.35s ease-in-out, color 0.2s ease-in-out;
+}
+
+#page-header #nav #nav-right .nav-button a:hover i,
+#page-header #nav #nav-left .nav-button a:hover i {
+  color: var(--anzhiyu-white);
+  transition: background 0.35s ease-in-out, color 0.2s ease-in-out;
 }
 
 /* 返回顶部按钮样式 */
