修复ai由于标题含有特殊符号造成的解析不正确

--- a/layout/includes/anzhiyu/ai-info.pug
+++ b/layout/includes/anzhiyu/ai-info.pug
@@ -138,7 +138,7 @@ if (description && ai)
               key: "#{theme.post_head_ai_description.key}",
               Referer: "#{theme.post_head_ai_description.Referer}"
             };
-            const truncateDescription = ("#{title}" + "#{description}").trim().substring(0, num)
+            const truncateDescription = ("#{pageTitle}" + "#{description}").trim().substring(0, num)
 
             const queryParams = `key=${options.key}&content=${truncateDescription}`;
             const requestOptions = {
