--- a/source/css/_page/common.styl
+++ b/source/css/_page/common.styl
@@ -17,7 +17,7 @@
   +maxWidth768()
     padding: 0
     z-index: 3
-    margin-top: 20px;
+    margin-top: 20px
 
   +minWidth2000()
     max-width: 1500px
