--- a/source/css/_custom/home_top/home_top.css
+++ b/source/css/_custom/home_top/home_top.css
@@ -1,7 +1,3 @@
-/* #home_top ~ main {
-  margin: 0;
-} */
-
 a span.top-group-text {
   border-radius: 0px 0 12px 0;
 }
@@ -16,5 +12,8 @@ div#bannerGroup {
 @media screen and (max-width: 1024px) {
   div#bannerGroup {
     width: auto;
+  }
+  #home_top ~ main {
+    margin-top: 0;
   }
 }
