--- a/layout/includes/page/about.pug
+++ b/layout/includes/page/about.pug
@@ -76,7 +76,8 @@ if site.data.about
       
       .author-content
         if theme.LA.enable
-          .about-statistic.author-content-item
+          - let cover = item.statistic.cover
+          .about-statistic.author-content-item(style=`background: url(${game_bg}) top / cover no-repeat;`)
             .card-content
               .author-content-item-tips 数据
               span.author-content-item-title 访问统计
