--- a/layout/includes/page/about.pug
+++ b/layout/includes/page/about.pug
@@ -77,7 +77,7 @@ if site.data.about
       .author-content
         if theme.LA.enable
           - let cover = item.statistic.cover
-          .about-statistic.author-content-item(style=`background: url(${game_bg}) top / cover no-repeat;`)
+          .about-statistic.author-content-item(style=`background: url(${cover}) top / cover no-repeat;`)
             .card-content
               .author-content-item-tips 数据
               span.author-content-item-title 访问统计
