赞赏者名单跳转更加准确 ptool新增share_mobile、share_weibo、share_copyurl配置

--- a/layout/includes/page/about.pug
+++ b/layout/includes/page/about.pug
@@ -207,7 +207,7 @@ if site.data.about
       - let sortedByDate = rawData.slice().sort((a, b) => new Date(b.datatime) - new Date(a.datatime));
       if rawData
         .author-content
-          .author-content-item.single.reward
+          .author-content-item.single.reward#about-reward
             .author-content-item-tips 致谢
             span.author-content-item-title 赞赏名单
             .author-content-item-description 感谢因为有你们，让我更加有创作的动力。
