修复ptool无mode时的样式问题

--- a/source/css/_layout/ptool.styl
+++ b/source/css/_layout/ptool.styl
@@ -91,9 +91,9 @@
         border: var(--style-border-always);
       .reward-dec 
         font-size: 0.6rem;
-      
 
-
-
-
-
+if hexo-config('ptool.enable') == true && !hexo-config('ptool.mode')
+  .post-tools .post-tools-left > div
+    margin: 0
+  .post-tools .post-tools-left
+    width auto
