--- a/source/css/_layout/post.styl
+++ b/source/css/_layout/post.styl
@@ -188,6 +188,10 @@ blockquote {
     margin-bottom: 0 !important
 
 #post
+  .post_share
+    margin: 8px 0 0
+    width: fit-content
+    min-width 205px
   .tag_share
     display: flex
     align-items: center;
@@ -219,9 +223,7 @@ blockquote {
             background: $light-blue
             color: var(--white)
 
-    .post_share
-      margin: 8px 0 0
-      width: fit-content
+
 
       .social-share
         font-size: .85em
