--- a/source/css/_layout/ptool.styl
+++ b/source/css/_layout/ptool.styl
@@ -97,3 +97,6 @@ if hexo-config('ptool.enable') == true && !hexo-config('ptool.mode')
     margin: 0
   .post-tools .post-tools-left
     width auto
+if hexo-config('ptool.enable') == true && hexo-config('ptool.categories')
+  #post .tag_share
+    margin-bottom: 2rem
