--- a/layout/includes/post/ptool.pug
+++ b/layout/includes/post/ptool.pug
@@ -60,10 +60,11 @@ if !theme.disable_top_img && page.top_img !== false
                   =item.name
                   span.tagsPageCount=item.length
 
+      !=partial('includes/third-party/share/index.pug', {}, {cache: true})
 if theme.ptool.categories
   .tag_share
     .post-meta__box
-      if (theme.post_meta.post.categories && page.categories.data.length > 0)
+      if (page.categories.data.length > 0)
         .post-meta__box__category-list
           each item, index in page.categories.data
             a(href=url_for(item.path)).post-meta__box__categoryes
