优化大量样式问题 卡片样式更加丰富 文章页样式优化（包括最近文章,toc等）

--- a/source/css/_custom/nav_menu/nav_menu.css
+++ b/source/css/_custom/nav_menu/nav_menu.css
@@ -553,6 +553,9 @@ center#name-container {
     backdrop-filter: none;
     background: var(--anzhiyu-background);
   }
+  #page-header #nav #nav-right div {
+    margin-left: 0.5rem;
+  }
 }
 
 @media screen and (min-width: 768px) {
