--- a/source/css/_layout/post.styl
+++ b/source/css/_layout/post.styl
@@ -188,6 +188,9 @@ blockquote {
     margin-bottom: 0 !important
 
 #post
+  +maxWidth768()
+    background: var(--anzhiyu-background) !important;
+    border: none;
   .post_share
     margin: 8px 0 0
     width: fit-content
