--- a/layout/includes/page/about.pug
+++ b/layout/includes/page/about.pug
@@ -165,7 +165,7 @@ if site.data.about
             span.author-content-item-title=game_title
             .content-bottom
               .icon-group
-                .loading-bar(role='presentation', aria-hidden='true')
+                .loading-bar(role='presentation', aria-hidden='true' style=`${game_title != "原神" ? "display: none": ""}`)
               .tips.game-yuanshen-uid=game_uid
         .author-content-item.comic-content
           .card-content
@@ -310,17 +310,31 @@ if site.data.about
               });
             }
 
-            let statisticElment = document.querySelector(".about-statistic.author-content-item");
+            let statisticElement = document.querySelector(".about-statistic.author-content-item");
             function statisticUP() {
-              if (anzhiyu.isInViewPortOfOne(statisticElment)) {
-                for (let i = 0; i < num.length; i++) {
-                  if (i == 0) continue;
-                  queueMicrotask(() => {
-                    statistic[i - 1].start();
-                  });
-                }
-                document.removeEventListener("scroll", throttleStatisticUP);
-              }
+              if (!statisticElement) return;
+
+              const callback = (entries, observer) => {
+                entries.forEach(entry => {
+                  if (entry.isIntersecting) {
+                    for (let i = 0; i < num.length; i++) {
+                      if (i == 0) continue;
+                      queueMicrotask(() => {
+                        statistic[i - 1].start();
+                      });
+                    }
+                    observer.disconnect(); // 停止观察元素，因为不再需要触发此回调
+                  }
+                });
+              };
+
+              const options = {
+                root: null,
+                rootMargin: "0px",
+                threshold: 0
+              };
+              const observer = new IntersectionObserver(callback, options);
+              observer.observe(statisticElement);
             }
 
             const selfInfoContentYear = new CountUp("selfInfo-content-year", 0, #{selfInfoContentYear}, 0, 2, {
@@ -332,19 +346,30 @@ if site.data.about
               suffix: "",
             });
 
-            let selfInfoContentYearElment = document.querySelector(".author-content-item.selfInfo.single");
-            function scrollSelfInfoContentYear() {
-              if (selfInfoContentYearElment && anzhiyu.isInViewPortOfOne(selfInfoContentYearElment)) {
-                selfInfoContentYear.start();
-                document.removeEventListener("scroll", throttleScrollSelfInfoContentYear);
-              }
+            let selfInfoContentYearElement = document.querySelector(".author-content-item.selfInfo.single");
+            function selfInfoContentYearUp() {
+              if (!selfInfoContentYearElement) return;
+
+              const callback = (entries, observer) => {
+                entries.forEach(entry => {
+                  if (entry.isIntersecting) {
+                    selfInfoContentYear.start();
+                    observer.disconnect(); // 停止观察元素，因为不再需要触发此回调
+                  }
+                });
+              };
+
+              const options = {
+                root: null,
+                rootMargin: "0px",
+                threshold: 0
+              };
+              const observer = new IntersectionObserver(callback, options);
+              observer.observe(selfInfoContentYearElement);
             }
-            const throttleStatisticUP = anzhiyu.throttle(statisticUP, 200);
-            document.addEventListener("scroll", throttleStatisticUP, { passive: true });
-            statisticUP();
-            const throttleScrollSelfInfoContentYear = anzhiyu.throttle(scrollSelfInfoContentYear, 200);
-            document.addEventListener("scroll", throttleScrollSelfInfoContentYear, { passive: true });
-            scrollSelfInfoContentYear();
+
+            selfInfoContentYearUp();
+            statisticUP()
           });
 
         var pursuitInterval = null;
