优化ptools分类显示

--- a/source/css/_layout/ptool.styl
+++ b/source/css/_layout/ptool.styl
@@ -22,7 +22,7 @@
     display: flex;
     align-items: center;
     margin-bottom: 0.5rem;
-    width 100%
+    // width 100%
     
 .share-link
   margin-left: 0.5rem;
