--- a/source/css/_third-party/twikoo.styl
+++ b/source/css/_third-party/twikoo.styl
@@ -81,7 +81,7 @@ if hexo-config('comments.use') == 'Twikoo'
   .tk-comments-container .tk-submit
       opacity: 1;
       height: auto;
-      overflow: auto;
+      overflow: visible;
   /* 输入提示 */
   /* 设置文字内容 :nth-child(1)的作用是选择第几个 */
   .el-input.el-input--small.el-input-group.el-input-group--prepend:nth-child(1):before {
@@ -290,7 +290,7 @@ if hexo-config('comments.use') == 'Twikoo'
   .tk-comments .tk-main .tk-row-actions-start {
     position: relative;
     top: -56px;
-    left: 2px;
+    left: 16px;
   }
 
   .OwO .OwO-body {
