1. 修复搜索时的滚动条鬼畜 2. 支持快捷键功能，包括"关闭快捷键功能", " 打开中控台", "M 播放/暂停音乐", "深色/浅色显示模式",等 3. 修复404页面页脚异常报错

--- a/layout/includes/anzhiyu/console.pug
+++ b/layout/includes/anzhiyu/console.pug
@@ -40,4 +40,8 @@
     .console-btn-item#consoleMusic(onclick='anzhiyu.musicToggle()', title='音乐开关')
       a.music-switch
         i.anzhiyufont.anzhiyu-icon-music
+    if theme.shortcutKey.enable
+    .console-btn-item#consoleKeyboard(onclick='anzhiyu.keyboardToggle()', title='音乐开关')
+      a.keyboard-switch
+        i.anzhiyufont.anzhiyu-icon-keyboard
   .console-mask(onclick='anzhiyu.hideConsole()', href='javascript:void(0);')
