--- a/layout/includes/anzhiyu/console.pug
+++ b/layout/includes/anzhiyu/console.pug
@@ -41,7 +41,7 @@
       a.music-switch
         i.anzhiyufont.anzhiyu-icon-music
     if theme.shortcutKey.enable
-    .console-btn-item#consoleKeyboard(onclick='anzhiyu.keyboardToggle()', title='音乐开关')
+    .console-btn-item#consoleKeyboard(onclick='anzhiyu.keyboardToggle()', title='快捷键开关')
       a.keyboard-switch
         i.anzhiyufont.anzhiyu-icon-keyboard
   .console-mask(onclick='anzhiyu.hideConsole()', href='javascript:void(0);')
