--- a/layout/includes/shortcutKey.pug
+++ b/layout/includes/shortcutKey.pug
@@ -12,7 +12,7 @@
           .content= content
 
 script.
-  var anzhiyu_keyboard = true
+  var anzhiyu_keyboard = false
   var anzhiyu_intype = false
   var anzhiyu_keyUpEvent_timeoutId = null
   function addKeyShotListener() {
