--- a/source/css/_layout/post.styl
+++ b/source/css/_layout/post.styl
@@ -221,7 +221,7 @@ blockquote {
           font-size: .85em
           transition: all .2s ease-in-out
           +maxWidth768()
-            margin: 4px 8px 4px 0
+            margin: 4px 8px 4px 0 !important
         &__tags
           margin: 0px 8px 0px 0
         &__categoryes
